# llm-forge

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY_AUDIT_REPORT.md  install.sh  pyproject.toml
.claude/: settings.json
.claude/hooks/: safety-check.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  gpu-tests.yml  release.yml
configs/: benchmark_llama_1b_full.yaml  benchmark_qlora_phi2.yaml  benchmark_smollm_135m.yaml  benchmark_smollm_360m.yaml  benchmark_tinyllama_1b.yaml  demo_lora_llama.yaml  example_cloud_aws.yaml  example_cloud_runpod.yaml  example_code_domain.yaml  example_legal_domain.yaml  example_lora.yaml  example_medical_domain.yaml  example_pretrain.yaml  example_qlora.yaml  example_rag.yaml  finance_specialist_h100.yaml  finance_specialist_local.yaml  finance_specialist_v7.yaml  finance_specialist_v7_h100.yaml  quickstart_tiny.yaml  quickstart_tiny_test.yaml
docker/: Dockerfile  Dockerfile.gpu  docker-compose.yml
docs/: LLM_FORGE_INPUT_AND_CONTEXT_PROBLEMS.md  LLM_FORGE_PROBLEMS_AND_RESEARCH.md  VERSION_COMPARISON.md  api_reference.md  configuration.md  data_preparation.md  deployment.md  distributed_training.md  evaluation_guide.md  hopper_cluster_guide.md  quickstart.md  training_guide.md
docs/design/: multi_agent_orchestration_spec.md
docs/superpowers/plans/: 2026-03-19-five-gaps-implementation.md  2026-03-25-multi-agent-phase1.md
docs/superpowers/specs/: 2026-03-19-intelligent-memory-system-design.md
examples/data/: sample_completion.txt  sample_sharegpt.jsonl  sample_train.jsonl
scripts/: analyze_results.py  debug_oom.py  deploy_to_hopper.sh  deploy_v7.sh  download_base_model.py  hopper_connect.sh  hopper_ssh.exp  monitor_job.sh  run_finance_specialist.sbatch  run_finance_specialist_v2.sbatch  run_finance_specialist_v7.sbatch  run_post_training.py  run_post_training.sbatch  setup_environment.sh  setup_hopper_demo.sh  test_orchestrator_live.py  training_observation_finance.md  validate_gpu.py
scripts/slurm/: benchmark_suite.sbatch  singularity_build.def  train_demo.sbatch  train_hopper.sbatch  train_multi_node.sbatch
src/llm_forge/: __init__.py  cli.py  wizard.py
src/llm_forge/chat/: __init__.py  api_keys.py  context_detector.py  engine.py  execution.py  input_handler.py  knowledge_base.py  memory.py  nvidia_provider.py  orchestrator.py  project_setup.py  slash_commands.py  system_prompt.py  tools.py  training_monitor.py  tui.py  ui.py  wizard_fallback.py
src/llm_forge/chat/agent_tools/: __init__.py  config_tools.py  data_tools.py  eval_tools.py  export_tools.py  research_tools.py  training_tools.py
src/llm_forge/chat/agents/: __init__.py  base.py  config_agent.py  data_agent.py  eval_agent.py  export_agent.py  research_agent.py  (+1 more)
src/llm_forge/config/: __init__.py  hardware_detector.py  schema.py  validator.py
src/llm_forge/data/: __init__.py  ifd_scorer.py  loader.py  mixing.py  preprocessor.py  refusal_augmentor.py
src/llm_forge/evaluation/: __init__.py  benchmarks.py  domain_eval.py  iti_prober.py  llm_judge.py  metrics.py  report_generator.py  retention_probes.py  training_summary.py
src/llm_forge/pipeline/: __init__.py  config_translator.py  dag_builder.py  pipeline_runner.py  preset_resolver.py
src/llm_forge/rag/: __init__.py  chunking.py  embeddings.py  pipeline.py  reranker.py  retriever.py  vectorstore.py
src/llm_forge/serving/: __init__.py  export.py  fastapi_server.py  gradio_app.py  iti_baker.py  model_merger.py  vllm_server.py
src/llm_forge/training/: __init__.py  alignment.py  callbacks.py  finetuner.py  mac_utils.py  mlx_trainer.py  pretrainer.py  trainer.py
src/llm_forge/ui/: __init__.py  __main__.py  app.py  model_catalog.py
src/llm_forge/utils/: __init__.py  download.py  error_recovery.py  gpu_utils.py  logging.py  perf_dashboard.py  security.py
tests/: conftest.py  test_cli.py  test_cli_demo.py  test_cli_phase4.py  test_config_presets.py  test_config_schema.py  test_data_loader.py  test_error_recovery.py  test_evaluation_metrics.py  test_grpo_trainer.py  test_ifd_scoring.py  test_llm_judge.py  test_mlx_trainer.py  test_model_merging.py  test_orpo_alignment.py  test_perf_dashboard.py  test_pipeline_integration.py  test_preprocessor.py  test_rag.py  test_sample_packing.py  test_serving.py  test_serving_modules.py  test_training_summary.py  test_wizard.py
tests/test_chat/: test_context_detector.py  test_engine.py  test_estimation.py  test_execution.py  test_input_handler.py  test_knowledge_base.py  test_memory.py  test_nvidia_provider.py  test_orchestrator.py  test_project_integration.py  test_project_setup.py  test_slash_commands.py  test_tools.py  test_training_monitor.py  test_tui.py  test_wizard_fallback.py
tests/test_chat/test_agent_tools/: test_config_tools.py  test_data_tools.py  test_eval_tools.py  test_export_tools.py  test_research_tools.py  test_training_tools.py
tests/test_chat/test_agents/: test_base_agent.py  test_config_agent.py  test_data_agent.py  test_eval_agent.py  test_export_agent.py  test_research_agent.py  test_training_agent.py
tests/test_cleaning/: test_deduplication.py  test_heuristic_filter.py  test_pii_redactor.py  test_unicode_fixer.py
tests/test_config/: test_hardware_detector.py
tests/test_evaluation/: test_ifeval_benchmark.py  test_quality_report_card.py  test_regression_detection.py  test_retention_probes.py
tests/test_training/: test_completion_only_loss.py  test_distributed_orchestrator.py  test_finetuner.py  test_grad_accum_fix.py  test_mac_utils.py  test_memory_optimizer.py  test_neftune_label_smoothing.py  test_progress_dashboard.py
(+31 files in other folders)
